tests/expectations/parser-statement/statement/async_fail.out
Error [EPAR0370047]: expected {
    --> test_0:1:7
     |
   1 | final finalize(foo);
     |       ^^^^^^^^
